--- a/Editor/src/main/java/cz/fi/muni/vavmar/editor/dialogs/TextDialog.form
+++ b/Editor/src/main/java/cz/fi/muni/vavmar/editor/dialogs/TextDialog.form
@@ -63,14 +63,14 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="fontSizeComboBoxPanel" alignment="0" max="32767" attributes="0"/>
-                          <Component id="previewPanel" max="32767" attributes="0"/>
                           <Component id="fontSettingsPanel" alignment="0" max="32767" attributes="0"/>
+                          <Component id="previewPanel" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                       <Component id="applyDirectlyCeckBox" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="165" max="32767" attributes="0"/>
+                      <EmptySpace pref="175" max="32767" attributes="0"/>
                       <Component id="okButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
@@ -122,6 +122,9 @@
           <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.okButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="applyDirectlyCeckBox">
       <Properties>
@@ -130,6 +133,9 @@
           <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.applyDirectlyCeckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="applyDirectlyCeckBoxItemStateChanged"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="fontSizeComboBoxPanel">
       <Properties>
@@ -146,15 +152,35 @@
       <SubComponents>
         <Component class="javax.swing.JComboBox" name="fontSizeComboBox">
           <Properties>
+            <Property name="editable" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="16">
+                <StringItem index="0" value="6"/>
+                <StringItem index="1" value="8"/>
+                <StringItem index="2" value="10"/>
+                <StringItem index="3" value="11"/>
+                <StringItem index="4" value="12"/>
+                <StringItem index="5" value="14"/>
+                <StringItem index="6" value="16"/>
+                <StringItem index="7" value="18"/>
+                <StringItem index="8" value="20"/>
+                <StringItem index="9" value="24"/>
+                <StringItem index="10" value="28"/>
+                <StringItem index="11" value="32"/>
+                <StringItem index="12" value="36"/>
+                <StringItem index="13" value="40"/>
+                <StringItem index="14" value="46"/>
+                <StringItem index="15" value="52"/>
               </StringArray>
             </Property>
+            <Property name="selectedIndex" type="int" value="4"/>
+            <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.fontSizeComboBox.toolTipText" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+            </Property>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="fontSizeComboBoxItemStateChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -189,7 +215,11 @@
                     <StringItem index="4" value="Item 5"/>
                   </StringArray>
                 </Property>
+                <Property name="selectionMode" type="int" value="0"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="fontSelectionListMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -203,6 +233,9 @@
               <ResourceString PropertyName="titleX" bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.previewPanel.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </TitledBorder>
           </Border>
+        </Property>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[130, 46]"/>
         </Property>
       </Properties>
 
@@ -242,36 +275,42 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="boldCheckBox" min="-2" max="-2" attributes="0"/>
+                  <Component id="fontBoldCheckBox" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                  <Component id="italicCheckBox" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="74" max="32767" attributes="0"/>
+                  <Component id="fontItalicCheckBox" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="boldCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="italicCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fontBoldCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fontItalicCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JCheckBox" name="boldCheckBox">
+        <Component class="javax.swing.JCheckBox" name="fontBoldCheckBox">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.boldCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.fontBoldCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="fontBoldCheckBoxItemStateChanged"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JCheckBox" name="italicCheckBox">
+        <Component class="javax.swing.JCheckBox" name="fontItalicCheckBox">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.italicCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+              <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.fontItalicCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="fontItalicCheckBoxItemStateChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
