--- a/Editor/src/main/java/editor/MainFrame.form
+++ b/Editor/src/main/java/editor/MainFrame.form
@@ -109,7 +109,7 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="Util.createListModel(new ArrayList&lt;String&gt;())&#xa;    " type="code"/>
+                  <Connection code="Utils.createListModel(new ArrayList&lt;String&gt;())&#xa;    " type="code"/>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
@@ -136,7 +136,7 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="Util.createListModel( dataFetcher.getAllTablesString() )" type="code"/>
+                  <Connection code="Utils.createListModel( dataFetcher.getAllTablesString() )" type="code"/>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
