--- a/Editor/src/main/java/cz/fi/muni/vavmar/editor/dialogs/TextDialog.form
+++ b/Editor/src/main/java/cz/fi/muni/vavmar/editor/dialogs/TextDialog.form
@@ -243,8 +243,8 @@
       <SubComponents>
         <Component class="javax.swing.JTextField" name="previewTextField">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="18" style="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="previewTextField.setFont(oldWidgetFont);">
+              <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
               <ResourceString bundle="cz/fi/muni/vavmar/editor/dialogs/Bundle.properties" key="TextDialog.previewTextField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
