--- a/Editor/src/main/java/cz/fi/muni/vavmar/editor/MainFrame.form
+++ b/Editor/src/main/java/cz/fi/muni/vavmar/editor/MainFrame.form
@@ -116,7 +116,7 @@
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="columnsListArea.setTransferHandler( new DnDListHandler() );&#xa;columnsListArea.setDragEnabled(true);"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="columnsListArea.setTransferHandler( new cz.fi.muni.vavmar.editor.DnDColumnListHandler(this) );&#xa;columnsListArea.setDragEnabled(true);"/>
               </AuxValues>
             </Component>
           </SubComponents>
@@ -130,7 +130,7 @@
           <SubComponents>
             <Component class="javax.swing.JList" name="tablesListArea">
               <Properties>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor" postCode="tablesList = mainScene.getDataProvider().getTables(null);">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                     <TitledBorder title="Dostupne tabulky">
                       <ResourceString PropertyName="titleX" bundle="cz/fi/muni/vavmar/editor/Bundle.properties" key="MainFrame.tablesListArea.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
@@ -138,7 +138,7 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="Utils.createListModel( dataProvider.getTables(null) )" type="code"/>
+                  <Connection code="Utils.createListModel( tablesList )" type="code"/>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
