- edited class PaperSettings to support standard paper formats using code defined in ?javax.print.Attributes.MediaSize? - edited MainScene to properly react on paper change - edited DataProviderImpl to retrieve all paper settings from iDempiere

--- a/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
+++ b/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
@@ -13,6 +13,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuSave">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+S"/>
+                </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="cz/muni/fi/vavmar/printeditor/Bundle.properties" key="MainFrame.jMenuSave.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                 </Property>
@@ -30,6 +33,9 @@
                   <ResourceString bundle="cz/muni/fi/vavmar/printeditor/Bundle.properties" key="MainFrame.jMenuPaperSettings.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuPaperSettingsActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
